--- a/Odevler/Bitirme Css/style.css
+++ b/Odevler/Bitirme Css/style.css
@@ -11,14 +11,9 @@ html {
 nav {
   display: flex;
   align-items: center;
-  margin: auto;
-  background: rgb(41, 2, 120);
-  background: linear-gradient(
-    90deg,
-    rgba(41, 2, 120, 1) 0%,
-    rgba(173, 20, 255, 1) 100%,
-    rgba(0, 125, 255, 1) 100%
-  );
+  margin: 10px auto;
+
+  background-color: rgb(70, 5, 192);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   width: 90%;
 
@@ -49,34 +44,33 @@ ul {
 }
 ul li a {
   padding: 1vw 2vw;
+  font-weight: 700;
   text-decoration: none;
-  color: aliceblue;
+  color: rgb(70, 5, 192);
   margin: 1vw;
   border-radius: 10px;
-  background: rgb(0, 125, 255);
-  background: linear-gradient(
-    90deg,
-    rgba(0, 125, 255, 1) 0%,
-    rgba(255, 114, 20, 1) 0%,
-    rgba(224, 14, 92, 1) 100%
-  );
+  background-color: white;
 }
 .containerbody {
   width: 90%;
   margin: auto;
-  height: 30vh;
+  height: auto;
+}
+ul li a:hover {
+  background-color: rgb(204, 170, 248);
+  color: white;
 }
 /* //hero image// */
 .hero-image {
-  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  margin-top: 10px;
   background-image: linear-gradient(
-      rgba(232, 131, 245, 0.5),
-      rgba(70, 5, 192, 0.5)
+      rgba(154, 108, 238, 0.8),
+      rgba(70, 5, 192, 0.8)
     ),
     url("img/business-woman-hands-typing-on-laptop-computer-wit-2021-08-30-21-08-44-utc.jpg");
 
   /* Set a specific height */
-  height: 100%;
+  height: 30vh;
   width: auto;
 
   /* Position and center the image to scale nicely on all screens */
@@ -104,11 +98,13 @@ ul li a {
 .text h1 {
   font-size: 4vw;
   margin: 2vw 0;
+  color: rgb(70, 5, 192);
 }
 .text h5 {
   font-size: 2vw;
   font-weight: 500;
   text-transform: capitalize;
+  color: rgb(70, 5, 192);
 }
 .image {
   width: 50%;
@@ -143,4 +139,169 @@ ul li a {
   width: 80%;
   font-size: 2vw;
   font-weight: 400;
+}
+
+/*card bölümü*/
+.row-card {
+  margin: -150px 0 0 0;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+  color: rgb(70, 5, 192);
+  font-weight: 600;
+}
+.icon-cont {
+  width: 100%;
+
+  padding: 30px;
+}
+.card2 i {
+  text-align: center;
+  font-size: 50px;
+  width: 90%;
+  height: auto;
+  color: rgb(70, 5, 192);
+  margin: 10px 0;
+}
+.card2 {
+  border: 6px outset rgb(79, 91, 255);
+  border-radius: 20px;
+  width: 45%;
+  height: auto;
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  margin: 10px;
+}
+.card-text p {
+  font-weight: 400;
+  padding: 10px;
+}
+
+/* footer */
+.footer {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: auto;
+  height: auto;
+  color: white;
+  background-color: rgb(70, 5, 192);
+  justify-content: center;
+  text-align: center;
+}
+.logoend {
+  margin: auto;
+  width: 150px;
+  height: 150px;
+}
+.logoend img {
+  width: 100%;
+}
+.logos {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+.logo6 {
+  margin: 10px;
+  color: white;
+  font-size: 30px;
+
+  height: auto;
+}
+.logo6 i {
+  width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+  /* Navigation styles */
+  nav {
+    flex-direction: column;
+    align-items: center;
+  }
+  .logoimg {
+    width: 100px;
+    height: 100px;
+    margin: auto;
+  }
+  .navlinks {
+    width: 100%;
+
+    margin: 0 15px 15px 15px;
+  }
+  .navlinks ul {
+    width: 100%;
+    justify-content: space-around;
+  }
+
+  ul li a {
+    margin: auto;
+    padding: 5px 30px;
+    border-radius: 5px;
+  }
+
+  /* Hero image styles */
+  .hero-text h1 {
+    font-size: 5vw;
+  }
+
+  .hero-text p {
+    font-size: 3vw;
+  }
+
+  /* Job description section styles */
+  .jobdesc {
+    flex-direction: column;
+  }
+  .text {
+    padding: 20px;
+  }
+  .text h1 {
+    font-size: 5vw;
+  }
+
+  .text h5 {
+    font-size: 3vw;
+  }
+
+  .image img,
+  .image1 img {
+    margin-top: -2vw;
+  }
+
+  /* About me section styles */
+  .about-me {
+    height: auto;
+  }
+
+  .about-me h3 {
+    margin-top: 30px;
+    font-size: 4vw;
+  }
+
+  .about-me p {
+    font-size: 3vw;
+  }
+
+  /* Card section styles */
+  .row-card {
+    margin-top: 10px;
+    flex-direction: column;
+  }
+
+  .card2 {
+    width: 90%;
+    margin: 25px auto;
+  }
+
+  /* Footer styles */
+  .footer {
+    height: auto;
+  }
+
+  .logo6 {
+    font-size: 5vw;
+  }
 }
