--- a/28.ders/Bitirme Şablon/style.css
+++ b/28.ders/Bitirme Şablon/style.css
@@ -1,54 +1,47 @@
-/* Global Styles */
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-
 body,
 html {
   height: 100%;
 }
-
-/* Navigation */
 nav {
   display: flex;
   align-items: center;
-  margin: 10px auto;
+  margin: auto;
+
   background-color: rgb(70, 5, 192);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   width: 90%;
+
   border-radius: 10px;
 }
 
 .logo {
   width: 30%;
 }
-
 .logoimg {
   display: flex;
   width: 60px;
   height: 60px;
 }
-
 .logoimg img {
   width: 100%;
 }
-
 .navlinks {
   width: 70%;
   display: flex;
   justify-content: end;
   align-items: center;
 }
-
 ul {
   display: flex;
   list-style-type: none;
   justify-content: end;
 }
-
 ul li a {
   padding: 1vw 2vw;
   font-weight: 700;
@@ -58,13 +51,16 @@ ul li a {
   border-radius: 10px;
   background-color: white;
 }
-
+.containerbody {
+  width: 90%;
+  margin: auto;
+  height: auto;
+}
 ul li a:hover {
   background-color: rgb(204, 170, 248);
   color: white;
 }
-
-/* Hero Image */
+/* //hero image// */
 .hero-image {
   margin-top: 10px;
   background-image: linear-gradient(
@@ -72,9 +68,12 @@ ul li a:hover {
       rgba(70, 5, 192, 0.8)
     ),
     url("img/business-woman-hands-typing-on-laptop-computer-wit-2021-08-30-21-08-44-utc.jpg");
+
+  /* Set a specific height */
   height: 30vh;
-  width: 90%;
-  margin: auto;
+  width: auto;
+
+  /* Position and center the image to scale nicely on all screens */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -82,6 +81,7 @@ ul li a:hover {
   border-radius: 10px;
 }
 
+/* Place text in the middle of the image */
 .hero-text {
   text-align: center;
   position: absolute;
@@ -91,43 +91,36 @@ ul li a:hover {
   color: white;
 }
 
-/* Job Description Section */
+/* job description bölümü */
 .text {
   text-align: center;
 }
-
 .text h1 {
   font-size: 4vw;
   margin: 2vw 0;
   color: rgb(70, 5, 192);
 }
-
 .text h5 {
   font-size: 2vw;
   font-weight: 500;
   text-transform: capitalize;
   color: rgb(70, 5, 192);
 }
-
 .image {
   width: 50%;
   margin: auto;
 }
-
 .image img,
 .image1 img {
   width: 100%;
 }
-
 .image1 img {
   margin-top: -4vw;
 }
-
-/* About Me Section */
+/* about-me bölümü */
 .about-me {
   display: flex;
-  width: 90%;
-  margin: auto;
+  width: 100%;
   height: 70vh;
   background-color: rgb(70, 5, 192);
   text-align: center;
@@ -135,14 +128,12 @@ ul li a:hover {
   color: aliceblue;
   padding-bottom: 50px;
 }
-
 .about-me h3 {
   margin: auto;
   width: 80%;
   font-size: 4vw;
   margin-bottom: 15px;
 }
-
 .about-me p {
   margin: auto;
   width: 80%;
@@ -150,22 +141,21 @@ ul li a:hover {
   font-weight: 400;
 }
 
-/* Card Section */
+/*card bölümü*/
 .row-card {
-  margin: -150px auto 0;
+  margin: -150px 0 0 0;
   display: flex;
-  width: 90%;
+  width: 100%;
   justify-content: center;
   text-align: center;
   color: rgb(70, 5, 192);
   font-weight: 600;
 }
-
 .icon-cont {
   width: 100%;
+
   padding: 30px;
 }
-
 .card2 i {
   text-align: center;
   font-size: 50px;
@@ -174,7 +164,6 @@ ul li a:hover {
   color: rgb(70, 5, 192);
   margin: 10px 0;
 }
-
 .card2 {
   border: 6px outset rgb(79, 91, 255);
   border-radius: 20px;
@@ -184,13 +173,12 @@ ul li a:hover {
   padding: 10px;
   margin: 10px;
 }
-
 .card-text p {
   font-weight: 400;
   padding: 10px;
 }
 
-/* Footer */
+/* footer */
 .footer {
   display: flex;
   flex-direction: column;
@@ -202,54 +190,47 @@ ul li a:hover {
   justify-content: center;
   text-align: center;
 }
-
 .logoend {
   margin: auto;
   width: 150px;
   height: 150px;
 }
-
 .logoend img {
   width: 100%;
 }
-
 .logos {
   width: 80%;
   display: flex;
   justify-content: center;
   margin: auto;
 }
-
 .logo6 {
   margin: 10px;
   color: white;
   font-size: 30px;
+
   height: auto;
 }
-
 .logo6 i {
   width: 100%;
 }
 
-/* Media Queries */
 @media only screen and (max-width: 768px) {
   /* Navigation styles */
   nav {
     flex-direction: column;
     align-items: center;
   }
-
   .logoimg {
     width: 100px;
     height: 100px;
     margin: auto;
   }
-
   .navlinks {
     width: 100%;
+
     margin: 0 15px 15px 15px;
   }
-
   .navlinks ul {
     width: 100%;
     justify-content: space-around;
@@ -274,11 +255,9 @@ ul li a:hover {
   .jobdesc {
     flex-direction: column;
   }
-
   .text {
     padding: 20px;
   }
-
   .text h1 {
     font-size: 5vw;
   }
